[DEV-5199] fix z-index issue with tooltip content

--- a/src/_scss/pages/award/shared/awardAmountsSection/_charts.scss
+++ b/src/_scss/pages/award/shared/awardAmountsSection/_charts.scss
@@ -12,6 +12,10 @@ $covid-potential: #AAC6E2;
 }
 
 .award-amounts-viz {
+    .award-amounts-tt__wrapper {
+        position: relative;
+        z-index: 2;
+    }
     .award-amounts-viz__bar-wrapper {
         border: rem(2) solid $color-gray;
         background-color: $color-white;
